libs/preprocessor/tests/errors/pe7_if_unit_or_function/stderr.ansi
[31m[PE7] Error:[0m attempted to use `#if` on a unit or function macro
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:3:5[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m#[0m[38;5;249md[0m[38;5;249me[0m[38;5;249mf[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249m [0m[38;5;201ma[0m[38;5;201mr[0m[38;5;201mm[0m[38;5;201ma[0m
 [38;5;240m  │[0m         [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m  
 [38;5;240m  │[0m           [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m defined as a unit here
 [38;5;240m  │[0m 
 [38;5;246m3 │[0m [38;5;249m#[0m[38;5;249mi[0m[38;5;249mf[0m[38;5;249m [0m[38;5;201ma[0m[38;5;201mr[0m[38;5;201mm[0m[38;5;201ma[0m
 [38;5;240m  │[0m     [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m  
 [38;5;240m  │[0m       [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m unit macro
[38;5;246m───╯[0m
